--- a/Nouvelle-collection.html
+++ b/Nouvelle-collection.html
@@ -51,7 +51,9 @@
 	</nav>
        
 
-
+    <div class="nouvelle">
+        <p> Nouvelle Collection</p>
+    </div>
  
         <div class="container">
             <div class="grid">
